v0.14
    * ADD : Threaded browser-based background image grabbing. (fixes #1312)
    * FIX : Handle redirection for TMS/WMS servers (fixes #1639)
    * FIX : Clear "hover" state when mouse leave the map widget
	* FIX : WMS has now the proper projection
	* ADD : Projections are specified in a "Projections.xml" file
	* ADD : move WMS/TMS configuration out of the preferences dialog to their own tools menu items.
	* ADD : switch to plugin-based image backgrounds
	* ADD : prioritize tile loading starting from center (by Arvin Schnell)
v0.13
    * FIX : Workaround for a crash with templates on Qt 4.5
	* FIX : Crash after TMS/WMS server renaming (fixes #1634)
	* FIX : Download opaqueness applied to relations (fixes #1637)
	* FIX : Do not zoom out after a viewport download in background projection (fixes #1638)
	* FIX : Remove layer from "downloaded areas" on close (fixes #1636)
	* FIX : Crash on layer close
	* FIX : Hardening upload process
	* FIX : Remove the deleted road from parent when joining
	* FIX : allow to split/join roads belonging to not-completely-downloaded relations
	* FIX : Avert crashes by using guarded pointers
	* FIX : In case of a failed "Download more", do not delete layer if it was a previously existing one.
	* FIX : GeoTagged images are drawn to the full size of GeoImageDock
	* FIX : Background images with a too long hash filename were not cached.
	* FIX : Tracklayers are (after asking the user) made writeable when opening geotagged images to it
	* ADD : Images can be dropped on TrackPoints to add the coordinates from the trackpoint to the image and then load it as geotagged image (see #1602)
	* FIX : trackpoints which are associated with an image are highlighted according to the Style's settings (but not by painting an reactangle in paintEvent manually)
	* FIX : Much better zoom (and image-moving) for ImageView in GeoImageDock
	* FIX : Long image filenames are cutted to fit the GeoImageDock (fixes #1452)